# wvu-ieng-331-m2-11

./: .gitignore  DESIGN.md  GRADE.md  README.md  pyproject.toml
sql/: ABC.sql  DeliveryTime.sql  bestcustomers.sql  bestsellers.sql  data_quality.sql
src/wvu_ieng_331_m2_11/: __init__.py  pipeline.py  queries.py  validation.py
