[project]
name = "wvu-ieng-331-m2-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Zorio", email = "apz00001@mix.wvu.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wvu-ieng-331-m2-11 = "wvu_ieng_331_m2_11:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
